<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Kiwni User</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_home"> </string>
    <string name="menu_myrides">My Rides</string>
    <string name="menu_payment">Payment</string>
    <string name="menu_offers">Offers</string>
    <string name="menu_safety">Safety</string>
    <string name="menu_FAQs">FAQs</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_share_app">Share App</string>
    <string name="menu_refer_Earn"><![CDATA[Refer & Earn]]></string>
    <string name="menu_support">Support</string>
    <string name="menu_about">About</string>
    <string name="Rs">\u20B9</string>
    <string name="google_pay">Google Pay</string>
    <string name="add_existing_upi_id">Add Existing UPI ID</string>
    <string name="paypal">PayPal</string>
    <string name="credit_card">Credit Card</string>
    <string name="debit_card">Debit Card</string>
    <string name="netbanking_card">NetBanking Card</string>
    <string name="no_cost_emi_no_selected_banks">No Cost EMI (No selected banks)</string>
    <string name="wallets">Wallets</string>
    <string name="zestmoney_emi">ZestMoney EMI</string>
    <string name="gift_voucher">Gift Voucher</string>
    <string name="amazon_pay">Amazon Pay</string>
    <string name="Safety_Para1">Send the Emergency Alert to your "Trusted Person" <br />
        for help, Only in Case of Emergency</string>
    <string name="safety_para2">Save the Mobile Number of up to <br />
        2 person whom you trust.</string>
    <string name="safety_para3">Press Alert Button incase you need Help <br />
        and wish to inform your dear ones</string>
    <string name="safety_para4">They will receive an alert buzzed and <br />
        sms informing them about your location</string>
    <string name="update_text">Please enter the contact details of your family member or Friends to be informed in case of Emergency</string>
    <string name="thankYouText">Prior to the 1 hr start of the trip, we will connect <br />
        you with the driver and cab details</string>
    <string name="pickup_date" tools:keep="@string/pickup_date">PICKUP DATE &amp; TIME </string>
    <string name="schedule_date" tools:keep="@string/schedule_date">SCHEDULE DATE &amp; TIME </string>
    <string name="package_rules">Rental Package rules &amp; Restriction</string>
    <string name="connecting_to_server">Please wait..</string>
    <string name="your_request_is_processing">Your request is processing</string>
    <string name="phoneno_error">Please enter valid phone no</string>
    <string name="email_error">Please enter valid email address</string>
    <string name="error_invalid_email" tools:keep="@string/error_invalid_email">This email address is invalid</string>
    <string name="first_name_error">Please enter valid Name</string>
    <string name="we_will_notify_cab">We will notify cab &amp; Driver details 1 hr prior to your <br />
                  scheduled trip</string>
    <string name="review_paragraph">I have booked cab one way from Mumbai to Pune It was great and very much comfortable journey Driver also very helpful.Cab proper clean and they are using all COVID protocols.</string>
    <string name="trips_not_available_error">Trips are not available.</string>
    <string name="ride_scheduled">Ride Scheduled</string>
    <string name="one_way_trip_to_mumbai">One-way-trip To Mumbai</string>
    <string name="rs_2500">Rs. 2500</string>
    <string name="estimated_fare">Estimated Fare</string>
    <string name="no_internet_msg">You are not connected to internet. Please check and try again. </string>
    <string name="internet_msg">You are connected to internet now.</string>
    <string name="password_error">Please enter password</string>
    <string name="last_name_error">Please enter Last Name</string>
    <string name="enter_10_digit_mobile_no">Enter 10 digit mobile no</string>
    <string name="your_krn_no_is">Your KRN number is</string>
    <string name="droppointimg">droppointimg</string>
    <string name="pickuppointimg">pickuppointimg</string>
    <string name="outstation_round_trip">Outstation (Round Trip)</string>
    <string name="trimurti_travel">Trimurti Travel</string>
    <string name="calenderimg">calenderimg</string>
    <string name="clockimg">clockimg</string>
    <string name="esttimeimg">esttimeimg</string>
    <string name="maskgrpimg">maskgrpimg</string>
    <string name="tata_harrier">Tata Harrier</string>
    <string name="luxury">Luxury</string>
    <string name="e_mail">E-Mail</string>
    <string name="phone">Phone</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="personal_or_business_trip">PERSONAL OR BUSINESS TRIP?</string>
    <string name="personal">Personal</string>
    <string name="business">Business</string>
    <string name="komfrey_technology_pvt_ltd">Komfrey Technology Pvt Ltd</string>
    <string name="komfrey123_gmail_com">Komfrey123@gmail.com</string>
    <string name="_9856784578">9856784578</string>
    <string name="kiwni20">KIWNI20%</string>
    <string name="apply">APPLY</string>
    <string name="billing_details">Billing Details</string>
    <string name="ride_fare">Ride Fare</string>
    <string name="_5400">5400/-</string>
    <string name="extra_fare_km">Extra Fare km</string>
    <string name="_0_km">0 Km</string>
    <string name="extra_fare_per_km">Extra Fare per km</string>
    <string name="apply_coupon">Apply Coupon</string>
    <string name="_1080">1080/-</string>
    <string name="gst_5">GST(5%)</string>
    <string name="_970">970/-</string>
    <string name="total">Total</string>
    <string name="_5290">5290/-</string>
    <string name="pay_30_in_advance">Pay 30% in advance</string>
    <string name="_1587">1587/-</string>
    <string name="pay_50_in_advance">Pay 50% in advance</string>
    <string name="pay_100_in_advance">Pay 100% in advance</string>
    <string name="_2645">2645/-</string>
    <string name="confirm_booking">Confirm Booking</string>
    <string name="logo">logo</string>
    <string name="part_of_logo">part of logo</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="login_with_mobile_number">Login With Mobile Number</string>
    <string name="by_continuing_i_confirm_that_i_have_read_and_agreed_to_the">By Continuing. I Confirm that I have read and agreed to the</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="confirm">CONFIRM</string>
    <string name="enter_the_6_digit_code_sent_you_at">Enter the 6-digit code sent you at</string>
    <string name="_91_0867676785">+91 0867676785</string>
    <string name="resend_code_in_00_03">Resend Code in 00.03</string>
    <string name="login">Login</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="or">OR</string>
    <string name="sort">sort</string>
    <string name="map">Map</string>
    <string name="sedan">SEDAN</string>
    <string name="ac">Ac</string>
    <string name="_4_1_seater">4+1 Seater</string>
    <string name="_3_bags">3 bags</string>
    <string name="pune_to_mumbai">PUNE TO MUMBAI</string>
    <string name="fri_24_dec_mon_27_dec">Fri, 24 Dec-Mon, 27 Dec</string>
    <string name="_07_00_pm">07:00 PM</string>
    <string name="est_km_211km">Est km 211km</string>
    <string name="_4hrs_40_km_package">4hrs 40 km package</string>
    <string name="view_details">View Details</string>
    <string name="booking_cancelled_successfully">Booking Cancelled Successfully</string>
    <string name="successfully">Successfully</string>
    <string name="ok">OK</string>
    <string name="send_me_booking_confirmation_by">SEND ME BOOKING CONFIRMATION BY</string>
    <string name="company_name">Company Name</string>
    <string name="company_email">Company Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="company_name1">Company Name : </string>
    <string name="company_email1">Company Email: </string>
    <string name="phone_number1">Phone Number   : </string>
    <string name="add_photo">Add Photo</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_from_gallery">Choose from Gallery</string>
    <string name="cancel">Cancel</string>
    <string name="_2hr">2hr</string>
    <string name="_25_km">25 km</string>
    <string name="error">Error.!</string>
    <string name="message">Message</string>
    <string name="close">Close</string>
    <string name="select_payment_type">Select Payment Type</string>
    <string name="pay">PAY</string>
    <string name="otp_4555">OTP : 4555</string>
    <string name="contact_9874563210">Contact : 9874563210</string>
    <string name="vehicle_no">Vehicle No :</string>
    <string name="done">Done</string>
    <string name="thank_you">Thank you</string>
    <string name="booking_successful">Booking Successful</string>
    <string name="booking_no">Booking No.</string>
    <string name="k012">K012</string>
    <string name="krn_no">KRN No.</string>
    <string name="kiwni234">KIWNI234</string>
    <string name="save_as_favourite">Save as favourite</string>
    <string name="dighi_pune_maharashtra_india">Dighi, Pune, Maharashtra, India</string>
    <string name="home">Home</string>
    <string name="work">Work</string>
    <string name="other">Other</string>
    <string name="cancle">Cancle</string>
    <string name="save">Save</string>
    <string name="to">To :</string>
    <string name="feedback_kiwni_in">feedback@kiwni.in</string>
    <string name="cc_bcc_from">Cc/Bcc, From:</string>
    <string name="subject">Subject :</string>
    <string name="feedback">Feedback</string>
    <string name="filter">Filter</string>
    <string name="brand">BRAND</string>
    <string name="segment">Segment</string>
    <string name="premium">PREMIUM</string>
    <string name="ultraluxury">ULTRALUXURY</string>
    <string name="model_registered_year">Model Registered Year</string>
    <string name="special_request">Special Request</string>
    <string name="wheel_chair_assistance">Wheel Chair Assistance</string>
    <string name="baby_car_chair">Baby Car Chair</string>
    <string name="safety_body_guard">Safety body Guard</string>
    <string name="vehicle_with_carrier">Vehicle With Carrier</string>
    <string name="pet_comfortable_cab">Pet Comfortable Cab</string>
    <string name="travel_sleeping_bed">Travel Sleeping Bed</string>
    <string name="enter_your_drop_point">Enter Your Drop Point</string>
    <string name="_07_00">07:00</string>
    <string name="view_cabs">View Cabs</string>
    <string name="confirm_location">Confirm Location</string>
    <string name="current_location">Current Location</string>
    <string name="locate_on_map">Locate On Map</string>
    <string name="enter_your_pickup_point">Enter Your Pickup Point</string>
    <string name="pickup_on">PICKUP ON</string>
    <string name="select_a_package">Select a Package</string>
    <string name="default_payment">Default Payment</string>
    <string name="cash">Cash</string>
    <string name="credit_debit_card">Credit/Debit Card</string>
    <string name="add_new_card">Add New Card</string>
    <string name="save_and_pay_via_cards">Save and Pay via Cards</string>
    <string name="add_wallets">Add Wallets</string>
    <string name="save_and_pay_via_wallets">Save and Pay via Wallets</string>
    <string name="profile">Profile</string>
    <string name="kiran_patil">Kiran Patil</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="_0867676785">0867676785</string>
</resources>