<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginHorizontal="@dimen/dp_10"
    android:layout_marginTop="@dimen/dp_10"
    android:layout_gravity="center"
    tools:ignore="RtlSymmetry">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/constraint_layout_border">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="@drawable/linear_corner_radius_background"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/select_payment_type"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/radioGroupPayment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/radioGooglePay"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginStart="30dp"
                        android:checked="true"
                        android:drawableStart="@drawable/google_pay_icon"
                        android:drawablePadding="10dp"
                        android:paddingStart="10dp"
                        android:text="@string/google_pay" />

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/radioExistingUpiId"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginStart="30dp"
                        android:drawableStart="@drawable/add_existing_upi_id"
                        android:drawablePadding="10dp"
                        android:paddingStart="10dp"
                        android:text="@string/add_existing_upi_id" />

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/radioPayPal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginStart="30dp"
                        android:drawableStart="@drawable/pay_pal_icon"
                        android:drawablePadding="10dp"
                        android:paddingStart="10dp"
                        android:text="@string/paypal" />

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/radioCreditCard"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginStart="30dp"
                        android:drawableStart="@drawable/credit_card_icon"
                        android:drawablePadding="10dp"
                        android:paddingStart="10dp"
                        android:text="@string/credit_card" />

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/radioDebitCard"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginStart="30dp"
                        android:drawableStart="@drawable/debit_card_icon"
                        android:drawablePadding="10dp"
                        android:paddingStart="10dp"
                        android:text="@string/debit_card" />

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/radioNetBanking"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginStart="30dp"
                        android:drawableStart="@drawable/net_banking_card"
                        android:drawablePadding="10dp"
                        android:paddingStart="10dp"
                        android:text="@string/netbanking_card" />

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/radioNoCostEmi"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginStart="30dp"
                        android:drawableStart="@drawable/no_cost_emi_icon"
                        android:drawablePadding="10dp"
                        android:paddingStart="10dp"
                        android:text="@string/no_cost_emi_no_selected_banks" />

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/radioWallets"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginStart="30dp"
                        android:drawableStart="@drawable/wallet_icon"
                        android:drawablePadding="10dp"
                        android:paddingStart="10dp"
                        android:text="@string/wallets" />

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/radioZestMoneyEmi"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginStart="30dp"
                        android:drawableStart="@drawable/zestmoney_emi_icon"
                        android:drawablePadding="10dp"
                        android:paddingStart="10dp"
                        android:text="@string/zestmoney_emi" />

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/radioGiftVoucher"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginStart="30dp"
                        android:drawableStart="@drawable/gift_voucher_icon"
                        android:drawablePadding="10dp"
                        android:paddingStart="10dp"
                        android:text="@string/gift_voucher" />

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/radioAmazonPay"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginStart="30dp"
                        android:drawableStart="@drawable/amazon_pay_icon"
                        android:drawablePadding="10dp"
                        android:paddingStart="10dp"
                        android:text="@string/amazon_pay" />

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/radioCash"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginStart="30dp"
                        android:drawableStart="@drawable/cash"
                        android:drawablePadding="10dp"
                        android:paddingStart="10dp"
                        android:text="@string/cash" />

                </RadioGroup>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnPay"
                    android:layout_width="220dp"
                    android:layout_height="35dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/rounded_button"
                    android:text="@string/pay"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/linearLayout1" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>